--- a/MVVM_TreeView/MainWindow.xaml
+++ b/MVVM_TreeView/MainWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+      <Label>Well, there's nothing to see here :)</Label>
     </Grid>
 </Window>
