--- a/MVVM_TreeView/View/MainWindow.xaml
+++ b/MVVM_TreeView/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MVVM_TreeView.MainWindow"
+﻿<Window x:Class="MVVM_TreeView.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
