--- a/MVVM_TreeView/App.xaml
+++ b/MVVM_TreeView/App.xaml
@@ -4,7 +4,7 @@
     <Application.Resources>
       <ResourceDictionary>
         <ResourceDictionary.MergedDictionaries>
-          <!--<ResourceDictionary Source="/Resources/ViewToViewModelMapping.xaml" />-->
+          <ResourceDictionary Source="/Resources/XAML/Templates.xaml" />
         </ResourceDictionary.MergedDictionaries>
       </ResourceDictionary>
     </Application.Resources>
